--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Binance wallet balance tracker",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "build": "echo 'No build step needed'",
+    "test": "echo 'No tests specified'"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,5 +17,14 @@
   },
   "engines": {
     "node": "18.x"
-  }
+  },
+  "keywords": [
+    "binance",
+    "wallet",
+    "balance",
+    "cryptocurrency",
+    "trading"
+  ],
+  "author": "",
+  "license": "MIT"
 }
