--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'No build step needed'",
-    "test": "echo 'No tests specified'"
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -16,15 +14,10 @@
     "dotenv": "^16.3.1"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.x",
+    "npm": ">=8.0.0"
   },
-  "keywords": [
-    "binance",
-    "wallet",
-    "balance",
-    "cryptocurrency",
-    "trading"
-  ],
+  "keywords": ["binance", "wallet", "trading", "cryptocurrency"],
   "author": "",
   "license": "MIT"
 }
