--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "build": "echo 'No build step required'",
+    "install": "npm ci --omit=dev"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,11 +15,13 @@
     "axios": "^1.6.0",
     "dotenv": "^16.3.1"
   },
+  "devDependencies": {},
   "engines": {
     "node": "18.x",
-    "npm": ">=8.0.0"
+    "npm": ">=9.0.0"
   },
   "keywords": ["binance", "wallet", "trading", "cryptocurrency"],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "commonjs"
 }
